ADD: lab with openssh

--- a/Ansible/02_ansible_ad-hoc/assets/docker-compose.yml
+++ b/Ansible/02_ansible_ad-hoc/assets/docker-compose.yml
@@ -1,22 +1,40 @@
 version: "3"
 
+networks:
+  sshnet:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 10.1.0.0/16
+
 services:
   node01:
-    command: ["sleep","infinity"]
+    command: "/root/init_cntrs.sh"
     image: ubuntu
     networks:
-      ssh_net:
-    ports:
-    - 22:22
+      sshnet:
+        ipv4_address: 10.1.1.1
     restart: always
+    volumes:
+      - ~/.ssh/id_rsa:/root/.ssh/id_rsa
+      - ~/init_cntrs.sh:/root/init_cntrs.sh
   node02:
-    command: ["sleep","infinity"]
+    command: "/root/init_cntrs.sh"
     image: ubuntu
     networks:
-      ssh_net:
-    ports:
-    - 22:22
+      sshnet:
+        ipv4_address: 10.1.1.2
     restart: always
-
-networks:
-  ssh_net:
+    volumes:
+      - ~/.ssh/id_rsa:/root/.ssh/id_rsa
+      - ~/init_cntrs.sh:/root/init_cntrs.sh
+  node03:
+    command: "/root/init_cntrs.sh"
+    image: ubuntu
+    networks:
+      sshnet:
+        ipv4_address: 10.1.1.3
+    restart: always
+    volumes:
+      - ~/.ssh/id_rsa:/root/.ssh/id_rsa
+      - ~/init_cntrs.sh:/root/init_cntrs.sh
