--- a/Ansible/10_control/assets/playbook/roles/docker_compose/tasks/main.yml
+++ b/Ansible/10_control/assets/playbook/roles/docker_compose/tasks/main.yml
@@ -11,6 +11,6 @@
 
 - name: creation lab
   community.docker.docker_compose:
-    project_src: flask
+    project_src: fablab
     files:
     - /root/docker-compose.yml
