--- a/Ansible/project/playbook/main.yml
+++ b/Ansible/project/playbook/main.yml
@@ -13,7 +13,7 @@
       mode: '0644'
   - name: creation lab
     community.docker.docker_compose:
-      project_src: flask
+      project_src: fablab
       files:
       - /root/docker-compose.yml
 
