--- a/Ansible/04_ansible_pb_01/assets/docker-compose.yml
+++ b/Ansible/04_ansible_pb_01/assets/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         ipv4_address: 10.1.1.1
     restart: always
   node02:
-    image: sickp/centos-sshd
+    image: takeyamajp/rocky-sshd
     networks:
       sshnet:
         ipv4_address: 10.1.1.2
