--- a/Ansible/07_ansible_crypt/assets/playbook/main.yml
+++ b/Ansible/07_ansible_crypt/assets/playbook/main.yml
@@ -12,7 +12,7 @@
       group: root
       mode: '0644'
   - name: creation lab
-    community.docker.docker_compose:
+    community.docker.docker_compose_v2:
       project_src: fablab
       files:
       - /root/docker-compose.yml
