--- a/Ansible/07_ansible_crypt/assets/playbook/main.yml
+++ b/Ansible/07_ansible_crypt/assets/playbook/main.yml
@@ -11,6 +11,13 @@
       owner: root
       group: root
       mode: '0644'
+  - name: creation folder lab
+    ansible.builtin.file:
+      path: /root/playbook/fablab
+      state: directory
+      owner: root
+      group: root
+      mode: '0644'
   - name: creation lab
     community.docker.docker_compose_v2:
       project_src: fablab
