DBG: lab project

--- a/Ansible/project/playbook/main.yml
+++ b/Ansible/project/playbook/main.yml
@@ -13,13 +13,13 @@
       mode: '0644'
   - name: creation folder lab
     ansible.builtin.file:
-      path: /root/playbook/fablab
+      path: /root/kicoda/Ansible/project/playbook/fablab
       state: directory
       owner: root
       group: root
       mode: '0644'
   - name: creation lab
-    community.docker.docker_compose:
+    community.docker.docker_compose_v2:
       project_src: fablab
       files:
       - /root/docker-compose.yml
