--- a/Ansible/10_control/assets/playbook/roles/docker_compose/tasks/main.yml
+++ b/Ansible/10_control/assets/playbook/roles/docker_compose/tasks/main.yml
@@ -9,6 +9,14 @@
     group: root
     mode: '0644'
 
+- name: creation folder lab
+  ansible.builtin.file:
+    path: /root/playbook/fablab
+    state: directory
+    owner: root
+    group: root
+    mode: '0644'
+
 - name: creation lab
   community.docker.docker_compose:
     project_src: fablab
