--- a/Ansible/project/playbook/main.yml
+++ b/Ansible/project/playbook/main.yml
@@ -19,7 +19,7 @@
       group: root
       mode: '0644'
   - name: creation lab
-    community.docker.docker_compose_v2:
+    community.docker.docker_compose:
       project_src: fablab
       files:
       - /root/docker-compose.yml
