--- a/Ansible/07_ansible_crypt/assets/playbook/main.yml
+++ b/Ansible/07_ansible_crypt/assets/playbook/main.yml
@@ -13,7 +13,7 @@
       mode: '0644'
   - name: creation folder lab
     ansible.builtin.file:
-      path: /root/playbook/fablab
+      path: /root/ansible/playbook/fablab
       state: directory
       owner: root
       group: root
