DBG: places and volumes

--- a/Ansible/04_ansible_pb_03/assets/docker-compose.yml
+++ b/Ansible/04_ansible_pb_03/assets/docker-compose.yml
@@ -10,6 +10,7 @@ networks:
 volumes:
   opt:
   root:
+  usrlib:
 
 services:
   node01:
@@ -36,6 +37,7 @@ services:
     volumes:
       - opt:/opt
       - root:/root
+      - usrlib:/usr/lib
     restart: always
     command: >
       sh -ceux '
